fix flex-wrap on element type

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -86,11 +86,12 @@ $primary-color: #C82F32;
         }
 
         .element-type {
-            margin-bottom: 3em; 
+            width: 90%;
+            margin: 0 auto 3em; 
             display: flex;
-            justify-content: center;
-            gap: 1em;
-
+            justify-content: space-between;
+            flex-wrap: wrap;
+            
             li {
                 @include list-element;
 
